--- a/Lesson3/build.gradle
+++ b/Lesson3/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: "java"
 apply plugin: "application"
 
-main ClassName = 'ru.eltex.Main'
+mainClassName = 'ru.eltex.Main'
 run()
         {
             standardInput = System.in
         }
-dependencies {
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
+dependencies{
+    compile 'org.apache.logging.log4j:log4j:2.11.2'
 }
